Frontend - Socios, turnos

--- a/Views/Socio/Delete.cshtml
+++ b/Views/Socio/Delete.cshtml
@@ -10,7 +10,7 @@
 <div class="container mt-5">
     <div class="d-flex flex-column align-items-between justify-content-between vh-80">
         <div class="row">
-            <dt class="col-sm-6">
+            <dt class="col-sm-6 pl-350">
                 @Html.DisplayNameFor(model => model.Dni)
             </dt>
             <dd class="col-sm-6">
@@ -18,7 +18,7 @@
             </dd>
         </div>
         <div class="row">
-            <dt class="col-sm-6">
+            <dt class="col-sm-6 pl-350">
                 @Html.DisplayNameFor(model => model.Nombre)
             </dt>
             <dd class="col-sm-6">
@@ -26,7 +26,7 @@
             </dd>
         </div>
         <div class="row">
-            <dt class="col-sm-6">
+            <dt class="col-sm-6 pl-350">
                 @Html.DisplayNameFor(model => model.Apellido)
             </dt>
             <dd class="col-sm-6">
@@ -34,7 +34,7 @@
             </dd>
         </div>
         <div class="row">
-            <dt class="col-sm-6">
+            <dt class="col-sm-6 pl-350">
                 @Html.DisplayNameFor(model => model.Email)
             </dt>
             <dd class="col-sm-6">
@@ -42,7 +42,7 @@
             </dd>
         </div>
         <div class="row">
-            <dt class="col-sm-6">
+            <dt class="col-sm-6 pl-350">
                 @Html.DisplayNameFor(model => model.Telefono)
             </dt>
             <dd class="col-sm-6">
@@ -50,7 +50,7 @@
             </dd>
         </div>
         <div class="row">
-            <dt class="col-sm-6">
+            <dt class="col-sm-6 pl-350">
                 @Html.DisplayNameFor(model => model.Provincia)
             </dt>
             <dd class="col-sm-6">
@@ -58,7 +58,7 @@
             </dd>
         </div>
         <div class="row">
-            <dt class="col-sm-6">
+            <dt class="col-sm-6 pl-350">
                 @Html.DisplayNameFor(model => model.Ciudad)
             </dt>
             <dd class="col-sm-6">
@@ -66,7 +66,7 @@
             </dd>
         </div>
         <div class="row">
-            <dt class="col-sm-6">
+            <dt class="col-sm-6 pl-350">
                 @Html.DisplayNameFor(model => model.Plan)
             </dt>
             <dd class="col-sm-6">
@@ -74,7 +74,7 @@
             </dd>
         </div>
         <div class="row">
-            <dt class="col-sm-6">
+            <dt class="col-sm-6 pl-350">
                 @Html.DisplayNameFor(model => model.GrupoFamiliar)
             </dt>
             <dd class="col-sm-6">
