--- a/Views/TurnoMedico/Edit.cshtml
+++ b/Views/TurnoMedico/Edit.cshtml
@@ -4,39 +4,37 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Editar</h1>
+<h1 class="text-center mt-5">Editar Turno Medico</h1>
+<hr/>
 
-<h4>Turno Médico</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="idTurno" />
-            <div class="form-group">
-                <label asp-for="Fecha" class="control-label"></label>
-                <input asp-for="Fecha" class="form-control" />
-                <span asp-validation-for="Fecha" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdSocio" class="control-label"></label>
-                <select asp-for="IdSocio" class="form-control" asp-items="ViewBag.IdSocio"></select>
-                <span asp-validation-for="IdSocio" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdMedico" class="control-label"></label>
-                <select asp-for="IdMedico" class="form-control" asp-items="ViewBag.IdMedico"></select>
-                <span asp-validation-for="IdMedico" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+<div class="container">
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="idTurno" />
+                <div class="form-group mb-3">
+                    <label asp-for="Fecha" class="control-label"></label>
+                    <input asp-for="Fecha" class="form-control" />
+                    <span asp-validation-for="Fecha" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="IdSocio" class="control-label"></label>
+                    <select asp-for="IdSocio" class="form-control" asp-items="ViewBag.IdSocio"></select>
+                    <span asp-validation-for="IdSocio" class="text-danger"></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="IdMedico" class="control-label"></label>
+                    <select asp-for="IdMedico" class="form-control" asp-items="ViewBag.IdMedico"></select>
+                    <span asp-validation-for="IdMedico" class="text-danger"></span>
+                </div>
+                <div class="d-flex justify-content-between mt-40">
+                    <a asp-action="Index" class="btn btn-secondary">Volver a la lista</a>
+                    <input type="submit" value="Guardar" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Volver a la lista</a>
 </div>
 
 @section Scripts {
