Alerta en borrar familiar

--- a/Views/Familiar/Delete.cshtml
+++ b/Views/Familiar/Delete.cshtml
@@ -6,9 +6,11 @@
 
 <h1 class="text-center mt-5">Eliminar Familiar</h1>
 
+
 <div class="container">
     <div class="row justify-content-center mt-5">
         <div class="col-md-6">
+            <div class="alert alert-danger" role="alert">¿Estás seguro que quieres borrar esto?</div>
             <dt class = "">
                 @Html.DisplayNameFor(model => model.Dni)
             </dt>
