Alertas de borrado

--- a/Views/GrupoFamiliar/Delete.cshtml
+++ b/Views/GrupoFamiliar/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Borrar</h1>
 
-<h3>¿Estás seguro que quieres borrar esto?</h3>
+<div class="alert alert-danger" role="alert">¿Estás seguro que quieres borrar esto?</div>
 <div>
     <h4>Grupo Familiar</h4>
     <hr />
