--- a/Views/Socio/Delete.cshtml
+++ b/Views/Socio/Delete.cshtml
@@ -9,6 +9,7 @@
 
 <div class="container mt-5">
     <div class="d-flex flex-column align-items-between justify-content-between vh-80">
+        <div class="alert alert-danger" role="alert">¿Estás seguro que quieres borrar esto?</div>
         <div class="row">
             <dt class="col-sm-6 pl-350">
                 @Html.DisplayNameFor(model => model.Dni)
