--- a/Views/Socio/Delete.cshtml
+++ b/Views/Socio/Delete.cshtml
@@ -85,7 +85,7 @@
         <form asp-action="Delete">
             <div class="d-flex justify-content-center mt-40">
                 <input type="hidden" asp-for="IdSocio" />
-                <a asp-action="Index" class="btn btn-secondary mr-200">Volver a la lista</a> |
+                <a asp-action="Index" class="btn btn-secondary mr-200">Volver a la lista</a>
                 <input type="submit" value="Borrar" class="btn btn-danger ml-200"/>
             </div>
         </form>
