--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Socio" asp-action="Index">Socio</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Socio" asp-action="Index">Socios</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TurnoMedico" asp-action="Index">Turnos</a>
@@ -38,16 +38,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Plan" asp-action="Index">Planes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cartilla" asp-action="Index">Cartillas</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Medico" asp-action="Index">Medicos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="CartillaMedico" asp-action="Index">Medicos en Cartillas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
@@ -62,7 +56,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - ORTSocial - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2023 - ORTSocial
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
