--- a/Views/Socio/Details.cshtml
+++ b/Views/Socio/Details.cshtml
@@ -81,7 +81,7 @@
             </dd>
         </div>
         <div class="d-flex justify-content-center mt-40">
-            <a asp-action="Index" class="btn btn-secondary mr-200">Volver a la lista</a> |
+            <a asp-action="Index" class="btn btn-secondary mr-200">Volver a la lista</a>
             <a asp-action="Edit" asp-route-id="@Model?.IdSocio" class="btn btn-warning ml-200">Editar</a>
         </div>
     </div>
