--- a/Views/TurnoMedico/Delete.cshtml
+++ b/Views/TurnoMedico/Delete.cshtml
@@ -37,7 +37,7 @@
         <form asp-action="Delete">
             <div class="d-flex justify-content-center mt-40">
                 <input type="hidden" asp-for="idTurno" />
-                <a asp-action="Index" class="btn btn-secondary mr-200">Volver a la lista</a> |
+                <a asp-action="Index" class="btn btn-secondary mr-200">Volver a la lista</a>
                 <input type="submit" value="Borrar" class="btn btn-danger ml-200" />
             </div>
         </form>
