index grupo familiar

--- a/Views/Familiar/Index.cshtml
+++ b/Views/Familiar/Index.cshtml
@@ -49,9 +49,9 @@
                     @Html.DisplayFor(modelItem => item.GrupoFamiliar.Nombre)
                 </td>
                 <td>
-                        | <a asp-action="Details" asp-route-id="@item.IdFamiliar" class="btn btn-outline-info">Detalles</a> |
-                        <a asp-action="Edit" asp-route-id="@item.IdFamiliar" class="btn btn-outline-warning">Editar</a> |
-                        <a asp-action="Delete" asp-route-id="@item.IdFamiliar" class="btn btn-outline-danger">Borrar</a>
+                    <a asp-action="Details" asp-route-id="@item.IdFamiliar" class="btn btn-outline-info">Detalles</a> |
+                    <a asp-action="Edit" asp-route-id="@item.IdFamiliar" class="btn btn-outline-warning">Editar</a> |
+                    <a asp-action="Delete" asp-route-id="@item.IdFamiliar" class="btn btn-outline-danger">Borrar</a>
                 </td>
             </tr>
     }
