--- a/Views/Socio/Index.cshtml
+++ b/Views/Socio/Index.cshtml
@@ -78,9 +78,9 @@
                     @Html.DisplayFor(modelItem => item.GrupoFamiliar.Nombre)
                 </td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.IdSocio" class="btn btn-secondary">Detalles</a> |
-                    <a asp-action="Edit" asp-route-id="@item.IdSocio" class="btn btn-warning">Editar</a>  |
-                    <a asp-action="Delete" asp-route-id="@item.IdSocio" class="btn btn-danger">Borrar</a>
+                    <a asp-action="Details" asp-route-id="@item.IdSocio" class="btn btn-outline-info">Detalles</a> |
+                    <a asp-action="Edit" asp-route-id="@item.IdSocio" class="btn btn-outline-warning">Editar</a>  |
+                    <a asp-action="Delete" asp-route-id="@item.IdSocio" class="btn btn-outline-danger">Borrar</a>
                 </td>
             </tr>
     }
