--- a/Views/TurnoMedico/Index.cshtml
+++ b/Views/TurnoMedico/Index.cshtml
@@ -42,9 +42,9 @@
                     @Html.DisplayFor(modelItem => item.Socio.Dni)
                 </td>
                 <td>
-                     <a asp-action="Details" asp-route-id="@item.idTurno" class="btn btn-secondary">Detalles</a> |
-                     <a asp-action="Edit" asp-route-id="@item.idTurno" class="btn btn-warning">Editar</a> |
-                     <a asp-action="Delete" asp-route-id="@item.idTurno" class="btn btn-danger">Borrar</a>
+                    <a asp-action="Details" asp-route-id="@item.idTurno" class="btn btn-outline-info">Detalles</a> |
+                    <a asp-action="Edit" asp-route-id="@item.idTurno" class="btn btn-outline-warning">Editar</a> |
+                    <a asp-action="Delete" asp-route-id="@item.idTurno" class="btn btn-outline-danger">Borrar</a>
                 </td>
             </tr>
     }
