--- a/Views/Familiar/Index.cshtml
+++ b/Views/Familiar/Index.cshtml
@@ -9,7 +9,7 @@
         <h1 class="">Familiares</h1>
     </div>
     <div class="text-right mb-3">
-        <a asp-action="Create" class="btn btn-primary">Crear nuevo Familiar</a>
+        <a asp-action="Create" class="btn btn-primary btn-lg">Crear Familiar</a>
     </div>
 </div>
 
