--- a/Views/TurnoMedico/Index.cshtml
+++ b/Views/TurnoMedico/Index.cshtml
@@ -9,7 +9,7 @@
         <h1 class="">Turnos</h1>
     </div>
     <div class="text-right mb-3">
-        <a asp-action="Create" class="btn btn-primary">Crear Turno</a>
+        <a asp-action="Create" class="btn btn-primary btn-lg">Crear Turno</a>
     </div>
 </div>
 
