--- a/Views/Medico/Index.cshtml
+++ b/Views/Medico/Index.cshtml
@@ -5,9 +5,7 @@
 }
 
 <div class="d-flex flex-column">
-    <div class="text-center">
-        <h1 class="">Médicos</h1>
-    </div>
+    <h1 class="text-center margint-5 mb-5">Médicos</h1>
 </div>
 
 <table class="table table-striped">
