--- a/Views/Plan/Index.cshtml
+++ b/Views/Plan/Index.cshtml
@@ -8,12 +8,10 @@
 </head>
 
 <div class="d-flex flex-column">
-    <div class="text-center">
-        <h1 class="">Planes</h1>
-    </div>
+    <h1 class="text-center margint-5 mb-5">Planes</h1>
 </div>
 
-<div class="row">
+<div class="row d-flex align-items-center justify-content-center vh-80 mt-100">
     @foreach (var item in Model)
     {
         <div class="col-md-4">
