--- a/Views/CartillaMedico/Index.cshtml
+++ b/Views/CartillaMedico/Index.cshtml
@@ -5,12 +5,10 @@
 }
 
 <div class="d-flex flex-column">
-    <div class="text-center">
-        <h1 class="">Médicos en Cartillas</h1>
-    </div>
+    <h1 class="text-center margint-5 mb-5">Médicos en Cartillas</h1>
 </div>
 
-<div class="container mt-4">
+<div class="container mt-100">
     <div id="medicosCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             @foreach (var item in Model)
