--- a/Views/Familiar/Index.cshtml
+++ b/Views/Familiar/Index.cshtml
@@ -5,10 +5,8 @@
 }
 
 <div class="d-flex flex-column">
-    <div class="text-center">
-        <h1 class="">Familiares</h1>
-    </div>
-    <div class="text-right mb-3">
+    <h1 class="text-center margint-5">Familiares</h1>
+    <div class="text-right mb-5">
         <a asp-action="Create" class="btn btn-primary btn-lg">Crear Familiar</a>
     </div>
 </div>
