--- a/Views/GrupoFamiliar/Index.cshtml
+++ b/Views/GrupoFamiliar/Index.cshtml
@@ -5,9 +5,7 @@
 }
 
 <div class="d-flex flex-column">
-    <div class="text-center">
-        <h1 class="">Grupos Familiares</h1>
-    </div>
+    <h1 class="text-center margint-5 mb-5">Grupos Familiares</h1>
 </div>
 
 <div class="d-flex align-items-center justify-content-center vh-80">
