Nombres categorias en create y edit

--- a/Views/TurnoMedico/Create.cshtml
+++ b/Views/TurnoMedico/Create.cshtml
@@ -19,13 +19,13 @@
                     <span asp-validation-for="Fecha" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <label asp-for="IdSocio" class="control-label"></label>
+                    <label asp-for="IdSocio" class="control-label">Dni Socio</label>
                     <select asp-for="IdSocio" class="form-control" asp-items="ViewBag.IdSocio">
                         <option value="0">Elija un Socio</option>
                     </select>
                 </div>
                 <div class="form-group">
-                    <label asp-for="IdMedico" class="control-label"></label>
+                    <label asp-for="IdMedico" class="control-label">Especialidad</label>
                     <select asp-for="IdMedico" class ="form-control" asp-items="ViewBag.IdMedico"></select>
                 </div>
                 <div class="d-flex justify-content-between mt-40">
