--- a/Views/TurnoMedico/Edit.cshtml
+++ b/Views/TurnoMedico/Edit.cshtml
@@ -19,12 +19,12 @@
                     <span asp-validation-for="Fecha" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <label asp-for="IdSocio" class="control-label"></label>
+                    <label asp-for="IdSocio" class="control-label">Dni Socio</label>
                     <select asp-for="IdSocio" class="form-control" asp-items="ViewBag.IdSocio"></select>
                     <span asp-validation-for="IdSocio" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <label asp-for="IdMedico" class="control-label"></label>
+                    <label asp-for="IdMedico" class="control-label">Especialidad</label>
                     <select asp-for="IdMedico" class="form-control" asp-items="ViewBag.IdMedico"></select>
                     <span asp-validation-for="IdMedico" class="text-danger"></span>
                 </div>
