--- a/Views/Familiar/Create.cshtml
+++ b/Views/Familiar/Create.cshtml
@@ -28,7 +28,7 @@
                     <span asp-validation-for="Apellido" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <label asp-for="IdGrupoFamiliar" class="control-label"></label>
+                    <label asp-for="IdGrupoFamiliar" class="control-label">Grupo Familiar</label>
                     <select asp-for="IdGrupoFamiliar" class ="form-control" asp-items="ViewBag.IdGrupoFamiliar"></select>
                 </div>
                 <div class="d-flex justify-content-between mt-40">
