--- a/Views/Familiar/Edit.cshtml
+++ b/Views/Familiar/Edit.cshtml
@@ -29,7 +29,7 @@
                     <span asp-validation-for="Apellido" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <label asp-for="IdGrupoFamiliar" class="control-label"></label>
+                    <label asp-for="IdGrupoFamiliar" class="control-label">Grupo Familiar</label>
                     <select asp-for="IdGrupoFamiliar" class="form-control" asp-items="ViewBag.IdGrupoFamiliar"></select>
                     <span asp-validation-for="IdGrupoFamiliar" class="text-danger"></span>
                 </div>
