--- a/Views/Socio/Create.cshtml
+++ b/Views/Socio/Create.cshtml
@@ -48,11 +48,11 @@
                     <span asp-validation-for="Ciudad" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <label asp-for="IdPlan" class="control-label"></label>
+                    <label asp-for="IdPlan" class="control-label">Plan</label>
                     <select asp-for="IdPlan" class ="form-control" asp-items="ViewBag.IdPlan"></select>
                 </div>
                 <div class="form-group mb-3">
-                    <label asp-for="IdGrupoFamiliar" class="control-label"></label>
+                    <label asp-for="IdGrupoFamiliar" class="control-label">Grupo Familiar</label>
                     <select asp-for="IdGrupoFamiliar" class ="form-control" asp-items="ViewBag.IdGrupoFamiliar">
                         <option value="0" selected>Crear Nuevo Grupo Familiar</option>
                     </select>
