--- a/Views/Socio/Edit.cshtml
+++ b/Views/Socio/Edit.cshtml
@@ -50,12 +50,12 @@
                     <span asp-validation-for="Ciudad" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <label asp-for="IdPlan" class="control-label"></label>
+                    <label asp-for="IdPlan" class="control-label">Plan</label>
                     <select asp-for="IdPlan" class="form-control" asp-items="ViewBag.IdPlan"></select>
                     <span asp-validation-for="IdPlan" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-3">
-                    <label asp-for="IdGrupoFamiliar" class="control-label"></label>
+                    <label asp-for="IdGrupoFamiliar" class="control-label">Grupo Familiar</label>
                     <select asp-for="IdGrupoFamiliar" class="form-control" asp-items="ViewBag.IdGrupoFamiliar">
                         <option value="0">Crear Nuevo Grupo Familiar</option>
                     </select>
