--- a/Views/TurnoMedico/Edit.cshtml
+++ b/Views/TurnoMedico/Edit.cshtml
@@ -13,6 +13,7 @@
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="idTurno" />
+                <input type="hidden" asp-for="IdSocio" />
                 <div class="form-group mb-3">
                     <label asp-for="Fecha" class="control-label"></label>
                     <input asp-for="Fecha" class="form-control" />
@@ -20,7 +21,7 @@
                 </div>
                 <div class="form-group mb-3">
                     <label asp-for="IdSocio" class="control-label">Dni Socio</label>
-                    <select asp-for="IdSocio" class="form-control" asp-items="ViewBag.IdSocio"></select>
+                    <input asp-for="Socio.Dni" class="form-control" readonly />
                     <span asp-validation-for="IdSocio" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-3">
